7900 XTX stuck at 'compiling shaders' in Monster Hunter Rise
Issue:
On 7900 XT/X if you open Monster Hunter: Rise, the compiling shaders screen and bar comes up, the bar fills, then the application hangs after the bar is full. You have to force close the application. The GPU itself does -not- hang:
Requirements to reproduce the issue:
Be on a 7900 xt/x, mesa-git, proton bleeding-edge and launch the game
Just opening a report after 3 confirmations:
(1) kzdixon on github: https://github.com/ValveSoftware/Proton/issues/5495#issuecomment-1380587632
(2) me on dxvk discord #drivers: anyone else with a 7900 xt/x able to verify a hang happening after compiling shaders?
(3) SunriseSky on dxvk discord #drivers: SunriseSky — it seems to be simply stuck at the full bar but it does not hang the gpu it also hogs a CPU core. maybe it hit an ininite loop in the compiler?
-
OS: Nobara
-
GPU: 7900 XTX
-
Kernel version: 6.1.6
-
Mesa version: 22.4.0-git.20230123.5bbeb8f5
-
Desktop manager and compositor: gnome, wayland
-
DXVK version: proton experimental : bleeding edge
-
Wine/Proton version: proton experimental : bleeding edge
Works fine on 6000 series cards and lower. Tested on 6800S, 6600, 6700 XT